--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,34 +1,32 @@
 [package]
 name = "registration_server"
-version = "0.1.0"
-authors = ["fabrice <fabrice@desre.org>"]
+version = "0.4.0"
+authors = ["WebThingsIO <team@webthings.io>"]
+edition = "2018"
 
 [dependencies]
-clap = "2.32"
+actix-rt = "1.1"
+actix-web = "3.2"
+clap = "2.33"
 email = "0.0"
-env_logger = "0.4"
-hyper = "0.10"
-hyper-native-tls = "0.2"
-iron = "0.6"
-iron-cors = { git = "https://github.com/mozilla-iot/iron-cors.git" }
-lettre = "0.8"
-lettre_email = "0.8"
+env_logger = "0.8"
+lettre = "0.9"
+lettre_email = "0.9"
 log = "0.4"
-maxminddb = "0.12"
-mount = "0.4"
-params = "0.8"
+maxminddb = "0.15"
+num-derive = "0.3"
+num-traits = "0.2"
 r2d2 = "0.8"
-regex = "1.1"
-router = "0.6"
+regex = "1.4"
 rust-crypto = "0.2"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
-toml = "0.4"
-uuid = { version = "0.7", features = ["v4"] }
+toml = "0.5"
+uuid = { version = "0.8", features = ["v4"] }
 
 [dev-dependencies]
-iron-test = "0.6"
+assert-json-diff = "1.1"
 
 [features]
 default = []
@@ -38,7 +36,7 @@ sqlite = ["r2d2-diesel", "diesel/sqlite"]
 
 [dependencies.diesel]
 optional = true
-version = "1.3"
+version = "1.4"
 
 [dependencies.r2d2-diesel]
 optional = true
